force-app/main/default/objects/Apttus_DocuApi__DocuSignSigningGroupMembers__c/Apttus_DocuApi__DocuSignSigningGroupMembers__c.object-meta.xml
<CustomObject>
    <description>Stores the DocuSign signing group members information.</description>
    <label>DocuSign Signing Group Member</label>
    <nameField>
        <displayFormat>DSSG-{0000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Signing Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>