force-app/main/default/objects/Apttus_DocuApi__DocuSignSigningGroupMembers__c/fields/Apttus_DocuApi__Email__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Email__c</fullName>
    <description>This field stores the email address of the group members</description>
    <inlineHelpText>This field stores the email address of the group members</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>