force-app/main/default/objects/Apttus_DocuApi__DocuSignSigningGroupMembers__c/fields/Apttus_DocuApi__SigningGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__SigningGroupId__c</fullName>
    <description>This field associates the signing group members to the DocuSign signing groups</description>
    <inlineHelpText>This field associates the signing group members to the DocuSign signing groups</inlineHelpText>
    <label>Signing Group Id</label>
    <referenceTo>Apttus_DocuApi__DocuSignSigningGroup__c</referenceTo>
    <relationshipLabel>DocuSign Signing Group Members</relationshipLabel>
    <relationshipName>DocuSignSigningGroupMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>