force-app/main/default/objects/Apttus_DocuApi__DocuSignSigningGroupMembers__c/fields/Apttus_DocuApi__UserName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__UserName__c</fullName>
    <description>This field stores the name of the signing group members</description>
    <inlineHelpText>This field stores the name of the signing group members</inlineHelpText>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>